<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AMasterMind_Menú Principal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tvModoJuego">Modo de juego</string>
    <string name="tvDificultad">Dificultad</string>
    <string name="btnAyuda">Ayuda</string>
    <string name="btnSalir">Salir</string>
    <string name="btnJugar">Jugar</string>
    <string name="tvLargoCodigo">Largo de código: 4</string>
    <string name="tvIntentos">Intentos: 10</string>
    <string name="tvRango">Rango: [1 , 4]</string>
    <string name="rbtnAdivinador">Adivinador</string>
    <string name="rbtnPensador">Pensador</string>
    <string name="rbtnPrincipiante">Principiante</string>
    <string name="rbtnModerado">Moderado</string>
    <string name="rbtnExperto">Experto</string>
    <string name="tvIngresarCodigo">Ingrese su código:</string>
    <string name="btnConfirmarCodigo">Confirmar código</string>
    <string name="tvRegresarMenu">Presiona \"Atras\" para volver al Menu Principal</string>
    <string name="tvDatosPartida">Datos partida</string>

</resources>
